[metadata]
name = jsp
version = attr: jsp.__version__
license = MIT
url = https://github.com/kjozsa/jsp
description = JSONPath CLI tool
keywords = jsonpath

[options]
packages = jsp
install_requires =
    loguru
    jsonpath-ng
    pygments

[options.entry_points]
console_scripts =
    jsp = jsp:main
